Changed to gzip compression

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Galaga.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Galaga.data.br",
-        frameworkUrl: buildUrl + "/Galaga.framework.js.br",
-        codeUrl: buildUrl + "/Galaga.wasm.br",
+        dataUrl: buildUrl + "/Galaga.data.gz",
+        frameworkUrl: buildUrl + "/Galaga.framework.js.gz",
+        codeUrl: buildUrl + "/Galaga.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Deek",
         productName: "Galaga",
