Removed compression (doesn't work with github )

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Galaga.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Galaga.data.gz",
-        frameworkUrl: buildUrl + "/Galaga.framework.js.gz",
-        codeUrl: buildUrl + "/Galaga.wasm.gz",
+        dataUrl: buildUrl + "/Galaga.data",
+        frameworkUrl: buildUrl + "/Galaga.framework.js",
+        codeUrl: buildUrl + "/Galaga.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Deek",
         productName: "Galaga",
